# game-theory-assignment

./: .gitignore  CMakeLists.txt  README.md  bool.h  coordinates.c  coordinates.h  crowd.c  crowd.h  dimension.h  main.c  person.h  population.c  population.h
